--- a/style.css
+++ b/style.css
@@ -41,17 +41,7 @@ footer {
 header, section, aside, nav, footer {
   padding: 20px;
 }
-/* External Links Styling */
 
-a[href^="http"]::after {
-    content: url('external-link-52.png'); 
-    display: inline-block;
-    width: 5px; 
-    height: 3px;
-    margin-left: 3px;
-    vertical-align: middle;
-  }
-  
 /* Header and Footer */
 
 header, footer {
@@ -62,7 +52,7 @@ header, footer {
 /* Typography */
 h1 {
   font-family: 'Lato', sans-serif;
-  font-size: 1.5rem;
+  font-size: 3rem;
   text-align: center;
   letter-spacing: 1px;
 }
@@ -74,18 +64,18 @@ h2 {
 }
 
 p {
-  font-size: 1.2rem;
-  text-indent: 0.8rem;
+  font-size: 1.6rem;
+  text-indent: 1.25rem;
 }
 
 /* Lists */
 ul, ol {
-  margin: 1.2rem 0;
+  margin: 1.5rem 0;
   padding-left: 2rem;
 }
 
 li {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   line-height: 1.6;
   list-style-type: square;
 }
@@ -108,7 +98,7 @@ nav ul li a {
   display: block;
   text-decoration: none;
   color: #fff;
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   padding: 10px;
   background-color: #34495e;
   border-radius: 3px;
@@ -130,6 +120,16 @@ a:hover, a:focus {
 
 a:active {
   color: #e74c3c;
+}
+
+/* External Links */
+a[href^="http"]::after {
+  content: url('external-link-52.png');
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  margin-left: 2px;
+  vertical-align: middle;
 }
 
 /* Footer */
