--- a/style.css
+++ b/style.css
@@ -126,10 +126,11 @@ a:active {
 a[href^="http"]::after {
   content: url('external-link-52.png');
   display: inline-block;
-  width: 5px;
-  height: 3px;
-  margin-left: 7px;
-  vertical-align: middle;
+  width: 6px;
+  height: 6px;
+  margin-left: 2px;
+  vertical-align: text-bottom;
+  opacity: 0.8;
 }
 
 /* Footer */
