--- a/style.css
+++ b/style.css
@@ -125,15 +125,13 @@ a:active {
 /* External Links */
 a[href^="http"]::after {
   content: url('external-link-52.png');
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  margin-left: 2px;
+  vertical-align: middle;
   opacity: 0.8;
 }
-
 /* Footer */
 footer {
   text-align: center;
