--- a/style.css
+++ b/style.css
@@ -131,8 +131,8 @@ a[href^="http"] {
 
 a[href^="http"]::after {
   content: url('external-link-52.png');
-  width: 200;
-  height: 100;
+  width: 2px;
+  height: 1px;
   opacity: 0.8;
 }
 /* Footer */
